@@ -4,13 +4,17 @@ LFLAGS = -O2 -Wall  # -fopenmp
 
 SR = ../Common/
 
+# geogrid.f90 contains module grid used by *_exo.f90
+# body.f90 contains module body used by *_exo.f90 and montecarlo.f90
+
+
 moon_exo: geogrid.o body.o moon_exo.o montecarlo.o gasdev.o \
 	makefile 
 	make -C $(SR) common
 	$(CC) $(LFLAGS) moon_exo.o montecarlo.o geogrid.o \
 	$(SR)flux_noatm.o $(SR)conductionQ.o $(SR)tridag.o \
-	$(SR)grids.o $(SR)psv.o $(SR)subl_subs.o \
-	gasdev.o $(SR)ran2.o
+	$(SR)grids.o $(SR)psv.o $(SR)subl_subs.o gasdev.o \
+	$(SR)ran2.o
 
 ceres_exo: geogrid.o body.o ceres_exo.o montecarlo.o gasdev.o \
 	makefile 
@@ -19,8 +23,6 @@ ceres_exo: geogrid.o body.o ceres_exo.o montecarlo.o gasdev.o \
 	$(SR)flux_noatm.o $(SR)conductionQ.o $(SR)tridag.o \
 	$(SR)grids.o $(SR)psv.o $(SR)subl_subs.o gasdev.o \
 	$(SR)ran2.o $(SR)generalorbit.o
-
-# module in geogrid.f90 
 
 %.o:	%.f makefile
 	$(CC) $(CFLAGS) -c $<
