@@ -8,36 +8,36 @@ LFLAGS = -O2 -Wall
 
 SR = ../Common/
 SRM = ../Mars/
-# topos.f90 has to be compiled first for module filemanager
+# filemanager.f90 has to be compiled first for module filemanager
 # topo3d_modules.f90 has to be compiled second for module allinterfaces
 # topo3d_subs.f90 contains module newhorizons and should be compiled third
 # conductionT2/Q2 contain modules conductionT/Q (therefore the symlink)
 
-shadows: topos.o topo3d_modules.o multigrid.o shadows.o shadow_subs.o \
+shadows: filemanager.o topo3d_modules.o multigrid.o shadows.o shadow_subs.o \
 	topo3d_common.o hpsort.o multigrid.o makefile
 	make -C $(SR) common
 	$(CC) $(LFLAGS) shadows.o shadow_subs.o hpsort.o \
 	topo3d_common.o multigrid.o -o $@
 
-fieldofviews: topos.o topo3d_modules.o fieldofviews.o topo3d_common.o \
+fieldofviews: filemanager.o topo3d_modules.o fieldofviews.o topo3d_common.o \
 	shadow_subs.o fieldofview_subs.o hpsort.o makefile
 	make -C $(SR) common
 	$(CC) $(LFLAGS) fieldofviews.o topo3d_common.o hpsort.o \
 	fieldofview_subs.o shadow_subs.o -o $@
 
-cratersQ_snapshot: topos.o topo3d_modules.o topo3d_subs.o topo3d_common.o \
-	cratersQ_snapshot.o makefile
+cratersQ_snapshot: filemanager.o topo3d_modules.o topo3d_subs.o \
+	topo3d_common.o cratersQ_snapshot.o makefile
 	$(CC) $(LFLAGS) cratersQ_snapshot.o topo3d_subs.o \
 	topo3d_common.o $(SR)flux_noatm.o -o $@
 
-cratersQ_moon: topos.o topo3d_modules.o topo3d_subs.o cratersQ_moon.o \
+cratersQ_moon: filemanager.o topo3d_modules.o topo3d_subs.o cratersQ_moon.o \
 	topo3d_common.o makefile
 	make -C $(SR) common
 	$(CC) $(LFLAGS) cratersQ_moon.o topo3d_common.o $(SR)generalorbit.o \
 	topo3d_subs.o $(SR)grids.o $(SR)conductionQ.o $(SR)flux_noatm.o \
 	$(SR)tridag.o -o $@
 
-cratersQ_mars: topos.o topo3d_modules.o topo3d_subs.o conductionT2.o \
+cratersQ_mars: filemanager.o topo3d_modules.o topo3d_subs.o conductionT2.o \
 	conductionQ2.o cratersQ_mars.o topo3d_common.o flux_mars.o \
 	makefile
 	make -C $(SR) common
@@ -46,21 +46,21 @@ cratersQ_mars: topos.o topo3d_modules.o topo3d_subs.o conductionT2.o \
 	flux_mars.o $(SR)grids.o conductionQ2.o $(SR)tridag.o \
 	conductionT2.o $(SR)julday.o $(SRM)marsorbit.o $(SR)psv.o -o $@
 
-cratersQ_mars_shadowsonly: topos.o topo3d_modules.o topo3d_subs.o \
+cratersQ_mars_shadowsonly: filemanager.o topo3d_modules.o topo3d_subs.o \
 	topo3d_common.o cratersQ_mars_shadowsonly.o makefile
 	make -C $(SR) common
 	make -C $(SRM) common-mars
 	$(CC) $(LFLAGS) cratersQ_mars_shadowsonly.o topo3d_common.o \
 	topo3d_subs.o $(SR)flux_noatm.o $(SR)julday.o $(SRM)marsorbit.o
 
-test: topos.o topo3d_modules.o test_shadows1pt.o shadow_subs.o \
+test: filemanager.o topo3d_modules.o test_shadows1pt.o shadow_subs.o \
 	topo3d_common.o hpsort.o multigrid.o makefile
 	make -C $(SR) common
 	$(CC) $(LFLAGS) test_shadows1pt.o shadow_subs.o hpsort.o \
 	topo3d_common.o multigrid.o 
 
-fieldproperties: topos.o topo3d_modules.o topo3d_common.o topo3d_subs.o \
-	fieldproperties.o makefile
+fieldproperties: filemanager.o topo3d_modules.o topo3d_common.o \
+	topo3d_subs.o fieldproperties.o makefile
 	$(CC) $(LFLAGS) fieldproperties.o topo3d_common.o topo3d_subs.o 
 
 %.o:	%.f makefile
